# GitMetrics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: coverage-report.txt  linter-report.txt  testing.md  Контрольная точка №1.md  Контрольная точка №2.md  Контрольная точка №3.md
src/gitmetrics/: __init__.py  __main__.py
src/gitmetrics/application/: __init__.py  audit_use_case.py
src/gitmetrics/domain/: __init__.py  commit_analyzer.py  interfaces.py  models.py
src/gitmetrics/infrastructure/: config.py  github_client.py  json_writer.py  logging.py  markdown_writer.py
src/gitmetrics/presentation/: cli.py
tests/: conftest.py  test_logging.py
tests/fixtures/: sample_commits.json
tests/integration/: test_github_client.py
tests/unit/: test_commit_analyzer.py  test_json_writer.py  test_markdown_writer.py
