[project]
name = "gitmetrics"
version = "0.1.0"
description = "Утилита аудита активности Git-репозитория на GitHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26.7",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.17",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
]

[project.scripts]
gitmetrics = "gitmetrics.presentation.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitmetrics"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["gitmetrics"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
